--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Odin Project 1</title>
 </head>
 <body>
+    <h1>Odin Recipes</h1>
+    <a href="https://www.allrecipes.com/recipe/16899/beef-wellington/">Beef Wellington</a>
+
     
 </body>
 </html>
