--- a/recipes/beefWellington.html
+++ b/recipes/beefWellington.html
@@ -1,4 +1,44 @@
- <h1>Odin Recipes</h1>
- <img src="https://www.allrecipes.com/thmb/ELkjNllEWXSSfOftkn9hgF2vJ4o=/0x512/filters:no_upscale():max_bytes(150000):strip_icc()/16899-beef-wellington-DDMFS-4x3-84b7691972174478bfb16b465cdaf0d2.jpg" alt="Beef Wellington" style="width:500px;">
- <a href="https://www.allrecipes.com/recipe/16899/beef-wellington/">Beef Wellington</a>
+ <body>
+
+  <h1>Odin Recipes</h1>
+  <a href="https://www.allrecipes.com/recipe/16899/beef-wellington/" target="_blank">Beef Wellington</a>
+  <img  src="https://www.allrecipes.com/thmb/ELkjNllEWXSSfOftkn9hgF2vJ4o=/0x512/filters:no_upscale():max_bytes(150000):strip_icc()/16899-beef-wellington-DDMFS-4x3-84b7691972174478bfb16b465cdaf0d2.jpg" alt="Beef Wellington" style="width:500px;">
+  <h3>Description</h3>
+  <p>
+   Beef Wellington, a delicious dish with no concrete origin. A popular theory is that the dish was made in celebration of Arthur Wellesley, a man who became the first Duke of Wellington.
+   <br>
+   The dish itself consists of pat&egrave; coated beef wrapped in puff pastry. The pastry adds an additional experience to the well flavored and spiced beef. Beef Wellington is a dish that should be tried at least once.
+  </p>
+  <h3>Ingredients</h3>
+  <ul>
+   <li>2 1/2 pounds beef tenderloin</li>
+   <li>4 tablespoons butter, softened, divided</li>
+   <li>2 tablespoons butter</li>
+   <li>1 onion, chopped</li>
+   <li>1/2 cup sliced fresh mushrooms</li>
+   <li>2 ounces liver paté</li>
+   <li>salt and pepper to taste</li>
+   <li>1 (17.5 ounce) package frozen puff pastry, thawed</li>
+   <li>1 large egg yolk, beaten</li>
+   <li>1 (10.5 ounce) can beef broth</li>
+   <li>2 tablespoons red wine</li>
+  </ul>
+  <h3>Steps</h3>
+  <ol>
+   <li>Preheat the oven to 425 degrees F (220 degrees C).</li>
+   <li>Place beef tenderloin in a baking dish. Spread 2 tablespoons softened butter over beef.</li>
+   <li>Bake in the preheated oven until browned, 10 to 15 minutes. Remove beef from the pan and reserve pan juices; allow beef to cool completely.</li>
+   <li>Increase oven temperature to 450 degrees F (230 degrees C).</li>
+   <li>Melt 2 tablespoons butter in a skillet over medium heat. Sauté onion and mushrooms in butter for 5 minutes. Remove from heat and let cool.</li>
+   <li>Mix paté and remaining 2 tablespoons softened butter together in a bowl; season with salt and pepper. Spread paté mixture over beef. Top with onion and mushroom mixture.</li>
+   <li>Roll out puff pastry dough to about 1/4-inch thickness and place beef in the center.</li>
+   <li>Fold up and seal all the edges, making sure the seams are not too thick. Place beef in a 9x13-inch baking dish, cut a few slits in the top of dough, and brush with egg yolk.</li>
+   <li>Bake in the preheated oven for 10 minutes. Reduce heat to 425 degrees F (220 degrees C) and continue baking until pastry is a rich, golden brown, 10 to 15 minutes. An instant-read thermometer inserted into the center should read between 122 to 130 degrees F (50 to 54 degrees C) for medium rare. Set aside to rest.</li>
+   <li>Meanwhile, place reserved pan juices in a small saucepan over high heat. Stir in beef broth and red wine; boil until slightly reduced, about 5 minutes. Strain and serve with beef.</li>
+   <li>Serve hot and enjoy!</li>
+  </ol>
+  <h3>Check out these </h3>
+
+ </body>
+  
  
