1. Add recipe hotChicken.html 2. Fix index.html links

--- a/recipes/beefWellington.html
+++ b/recipes/beefWellington.html
@@ -1,14 +1,17 @@
  <body>
-
-  <h1>Odin Recipes</h1>
-  <a href="https://www.allrecipes.com/recipe/16899/beef-wellington/" target="_blank">Beef Wellington</a>
-  <img  src="https://www.allrecipes.com/thmb/ELkjNllEWXSSfOftkn9hgF2vJ4o=/0x512/filters:no_upscale():max_bytes(150000):strip_icc()/16899-beef-wellington-DDMFS-4x3-84b7691972174478bfb16b465cdaf0d2.jpg" alt="Beef Wellington" style="width:500px;">
-  <h3>Description</h3>
+  
+  <a href="/home/willy3/repos/odin-recipes/index.html">Home</a>
+  <h1>Beef Wellington</h1>
+  <br />
+  <img  src="https://www.allrecipes.com/thmb/ELkjNllEWXSSfOftkn9hgF2vJ4o=/0x512/filters:no_upscale():max_bytes(150000):strip_icc()/16899-beef-wellington-DDMFS-4x3-84b7691972174478bfb16b465cdaf0d2.jpg" alt="Beef Wellington" style="width:500px;"/>
+  <!-- Description -->
+  <h2>Description</h2>
   <p>
    Beef Wellington, a delicious dish with no concrete origin. A popular theory is that the dish was made in celebration of Arthur Wellesley, a man who became the first Duke of Wellington.
-   <br>
+   <br />
    The dish itself consists of pat&egrave; coated beef wrapped in puff pastry. The pastry adds an additional experience to the well flavored and spiced beef. Beef Wellington is a dish that should be tried at least once.
   </p>
+  <!-- Ingredients -->
   <h3>Ingredients</h3>
   <ul>
    <li>2 1/2 pounds beef tenderloin</li>
@@ -23,6 +26,7 @@
    <li>1 (10.5 ounce) can beef broth</li>
    <li>2 tablespoons red wine</li>
   </ul>
+  <!-- Steps -->
   <h3>Steps</h3>
   <ol>
    <li>Preheat the oven to 425 degrees F (220 degrees C).</li>
@@ -37,8 +41,7 @@
    <li>Meanwhile, place reserved pan juices in a small saucepan over high heat. Stir in beef broth and red wine; boil until slightly reduced, about 5 minutes. Strain and serve with beef.</li>
    <li>Serve hot and enjoy!</li>
   </ol>
-  <h3>Check out these </h3>
-
+ 
  </body>
   
  
