--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="https://www.allrecipes.com/recipe/16899/beef-wellington/">Beef Wellington</a>
+    <ul>
+        <li>
+            <a href="recipes/beefWellington.html">Beef Wellington</a>
+        </li>
+        <li>
+             <a href="recipes/hotChicken.html">Chef John's Nashville Hot Chicken</a>
+        </li>
+    </ul>
 
     
 </body>
