--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         <li>
              <a href="recipes/hotChicken.html">Chef John's Nashville Hot Chicken</a>
         </li>
+        <li>
+            <a href="recipes/bananaBread.html">Whole Grain Banana Bread</a>
+        </li>
     </ul>
 
     
